infrastructure/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pos-system
  labels:
    name: pos-system
